--- a/index.html
+++ b/index.html
@@ -4,7 +4,113 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/css.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body><div class="wrapper">
+   <div class="content">
+   <div class="header">
+   <header class="profile-header">
+   <div class="container">
+   <div class="logo-and-title">
+   <a href="index.html" class="logo-link">
+<div><img src=".\image\logo (2).png" alt="ОНО ТЕБЕ НАДО" class="logo">
+   </a></div>
+   <h1 class="main-menu">
+   <a href="#index.html">Главная</a>
+      <a href="#about">Посмотреть лоты</a>
+      <a href="#contacts">Об аукционе</a>
+    <div class="contact-info">
+  <a href="tel:+99995555555">+9 999 555 5555</a>
+  <br>
+  <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+  <br>
+  <a href="https://yandex.ru/maps/-/CLFFEA7V" target="_blank">
+    наб, Принсегграхт 263-265, Амстердам
+  </a>
+</div>
+    </div>
+    </h1>
+  </div>
+  </div>
+</header>
+<div class="full-screen-section">
+  <div class="overlay">
+    <h1 class="centered-text1">ОНО</h1>
+    <h1 class="centered-text2">ТЕБЕ</h1>
+    <h1 class="centered-text3">НАДО</h1>
+  <div class="text1"><b>Аукцион — место, где победа достаётся дорогой ценой</b></div>
+</div>
+   <button class="button" onclick="alert('Ставка сделана!')">Сделать ставку</button>
+</div>
+</div>
+<a id="contacts"> <p class="sonic1"><b>Об аукционе</b></p></a>
+  <img src="image/logo (2).png" alt="Оно тебе надо" class="pho1o">
+
+<p class="sonic2">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.<br>Наши лоты вообще не должны были попасть ни на один аукцион.<br> Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? <br>Кому нужны все эти странные вещи, созданные любителями?<br></p>
+<p class="sonic10">Слишком сложные или, наоборот, слишком простые.<br> Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. <br>Когда-то они казались просто неудачными.
+Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру.<br> Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.</p>
+<div class="big-block">
+  <a id="about"><p><h1>Лоты</h1></a></p>
+  <div class="cards-container">
+    <div class="card">
+      <h2>Фильм режиссера,который бросил киношколу.</h2>
+      <p>Не просто бросил, а ушёл с первой лекции. Мечтал о карьере с детство,первый фильм снял на видеокамеру в возрасте восьми лет.Снял девять высоко оценённых
+       полнометражных фильмов.Он сам работает над сценариями, и основаны они преимущественно на оригинальном материале.Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+      <img src="image/Alana_Haim_Licorice_Pizza.jpg" alt="Фото 1" />
+    </div>
+    <div class="card">
+      <h2>Книга, где описан один скучный день из жизни рекламного агента</h2>
+      <p>Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+      <img src="image/scale_1200.jpeg" alt="Фото 2" />
+    </div>
+    <div class="card">
+      <h2>Картина, которую повторит даже 5-летний сын маминой подруги</h2>
+      <p>Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+      <img src="image/537526bb07529f2a11c22555f852db63.jpg" alt="Фото 3" />
+    </div>
+  </div>
+</div>
+  </div>
+</section>
+<section id="footer">
+
+    <div class="footer">
+    <div class="title-text">
+    <h1>Feedback for Clients</h1>
+    </div>
+       <div class="footer-left">
+       <h2>ОНО ТЕБЕ НАДО</h2>
+       <P>Уникальный аукцион редких и эксклюзивных предметов. </br>Объединяем коллекционеров с уникальными лотами с 2000 годов.</P></div>
+       <div class="footer-center">
+       <H4>Контакты</h4>
+       <p><a href="mailto:info@sobaka.ge" style="text-decoration: none; color: inherit;">info@sobaka.ge</a></p>
+       <p><a href="https://yandex.ru/maps/-/CLFFEA7V" target="_blank" style="text-decoration: none; color: inherit;">
+    наб, Принсегграхт 263-265, Амстердам
+  </a></p>
+       <p> <a href="tel:+99995555555" style="text-decoration: none; color: inherit;">+9 999 555 5555</a></p>
+       </div>
+        <div class="footer-right">
+      <h3>Мы в соцсетях</h3>
+  <div class="social-icons">
+      <a href="https://t.me/fadedmoscow" target="_blank" aria-label="Telegram" class="social-icon telegram">
+        <i class="fab fa-telegram-plane"></i>
+      </a>
+      <a href="https://vk.com/feed" target="_blank" aria-label="VK" class="social-icon vk">
+        <i class="fab fa-vk"></i>
+      </a>
+  <a href="https://www.youtube.com/" target="_blank" aria-label="YouTube" class="social-icon">
+  <i class="fab fa-youtube"></i>
+  </a>
+  <a href="https://twitter.com/" target="_blank" aria-label="Twitter"  class="social-icon ">
+   <i class="fab fa-twitter"></i>
+  </a>
+</div>
+<div class="footer-bottom">
+<p> © 2024 "Оно тебе надо". Все права защищены.</p>
+</div>
+       </div>
+    </section>
+  </body>
 </html>
